--- a/230404/02_corona.ipynb
+++ b/230404/02_corona.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -553,6 +553,19 @@
        "      <td>3.919308</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-11 00:00:00.000</td>\n",
+       "      <td>60</td>\n",
+       "      <td>7755</td>\n",
+       "      <td>52</td>\n",
+       "      <td>20200311</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>2021-10-07 10:30:51.51</td>\n",
+       "      <td>222395.0</td>\n",
+       "      <td>3.804175</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -560,18 +573,20 @@
       "text/plain": [
        "                      등록일시  누적사망자  누적확진자  게시글번호       기준일   기준시간  \\\n",
        "0  2020-03-10 00:00:00.000     54   7513     51  20200310  00:00   \n",
+       "1  2020-03-11 00:00:00.000     60   7755     52  20200311  00:00   \n",
        "\n",
        "                     수정일시     누적의심자     누적확진률  일일사망자  \n",
-       "0  2021-10-07 10:30:51.51  210144.0  3.919308    NaN  "
+       "0  2021-10-07 10:30:51.51  210144.0  3.919308    NaN  \n",
+       "1  2021-10-07 10:30:51.51  222395.0  3.804175    6.0  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corona.head(1)"
+    "corona.head(2)"
    ]
   }
  ],
