--- a/230404/01_pandas.ipynb
+++ b/230404/01_pandas.ipynb
@@ -17,8 +17,7 @@
    "outputs": [],
    "source": [
     "# 스리즈 형태 데이터를 생성\n",
-    "pd_list = pd.Series([5000,6000,65000,65000],\n",
-    "                    index=['아메리카노','카페라떼','카페모카','카푸치노'])"
+    "pd_list = pd.Series([5000,6000,65000,65000],index=['아메리카노','카페라떼','카페모카','카푸치노'])"
    ]
   },
   {
