--- a/230403/01_function.ipynb
+++ b/230403/01_function.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
     "# max() -> 인자값들 중에 가장 큰 숫자를 출력\n",
     "# min() -> 인자 값들 중에 가장 작은 숫자를 출력\n",
     "print(max(1,6,3,4))\n",
-    "print(min(1,6,3,4))"
+    "print(min(1,6,3,4))\n"
    ]
   },
   {
@@ -1024,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
