--- a/note_summary.ipynb
+++ b/note_summary.ipynb
@@ -436,7 +436,7 @@
     "df.dropna(axis=0) # 결측치가있는 행 전부 삭제\n",
     "\n",
     "# 결측치를 'OT'로 대체\n",
-    "drinks.loc[(drinks['continent].isna()),'continent] = 'OT'\n",
+    "drinks.loc[(drinks['continent'].isna()),'continent'] = 'OT'\n",
     "\n",
     "\n",
     "# 데이터 프레임 필터 기능 \n",
@@ -490,7 +490,18 @@
     "\n",
     "#원하는 나라 순위를 찾아보자\n",
     "drinks_rank.loc[drinks_rank['country']=='South Korea']\n",
-    "\n"
+    "\n",
+    "# 식사인원과 성별 따른 그룹화를 해서 팁의 평균비율을 구하는 코드\n",
+    "group_data = tips[['식사인원','성별', '팁 비율']].groupby(['식사인원','성별']).mean()\n",
+    "\n",
+    "# pct_change()시계열 데이터에서 이전 값과의 변화율(percentage change)을 계산하는 함수입니다.\n",
+    "# pct_change() 함수는 DataFrame, Series 등의 데이터 타입에서 사용할 수 있습니다.\n",
+    "\n",
+    "# 결측치와 무한대의 값이 존재하는지 확인  inf 무한대\n",
+    "df.loc[df.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
+    "# df.loc[뒤에 ~사용시 결측치가 아닌 나머지의 값들만 나오기 때문에 아래 결측치를 drop한 값과 같음\n",
+    "\n",
+    "# 누적곱 cumprod()"
    ]
   },
   {
@@ -534,6 +545,17 @@
     "plt.annotate('South Korea :' + str(korea_rank + 1),\\\n",
     "              xy=(korea_rank, korea_alcohol_rate), xytext=(korea_rank+ 5, korea_alcohol_rate+0.03),arrowprops=dict(facecolor = 'r', shrink =0.01))\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pivot_table\n",
+    "1. 그룹화\n",
+    "2. 인덱스, 컬럼을 기준으로그룹화\n",
+    "3. 데이터 집계를 나타낸다\n"
    ]
   },
   {
