--- a/230412/03_bollinger.ipynb
+++ b/230412/03_bollinger.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\2364376469.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.any and Series.any will be keyword-only.\n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\2364376469.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.any and Series.any will be keyword-only.\n",
       "  df = df.loc[~df.isin((np.nan, np.inf, -np.inf)).any(1)]\n"
      ]
     },
@@ -213,7 +213,7 @@
        "[2162 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\3928833520.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\3928833520.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "Name: 2010-12-17, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\3313801204.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\3313801204.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -341,7 +341,7 @@
        "2010-11-18  27.027195     NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,20 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\1636940628.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\1636940628.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  price_df['ub'] = price_df['center']+(2*price_df['Adj Close'].rolling(20).std())\n",
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\1636940628.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\1636940628.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "2011-01-04  29.959959  27.569085  29.692262  25.445907"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\1442715778.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\1442715778.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj Close     center         ub         lb trade  return   acc_rtn\n",
+      "Date                                                                          \n",
+      "2011-01-03  29.295927  27.433909  29.236157  25.631661           1.0  1.000000\n",
+      "2011-01-04  29.959959  27.569085  29.692262  25.445907           1.0  1.000000\n",
+      "2011-01-05  30.094337  27.703075  30.105109  25.301041           1.0  1.000000\n",
+      "2011-01-06  30.750460  27.878961  30.626324  25.131599           1.0  1.000000\n",
+      "2011-01-07  30.813686  28.086072  31.064934  25.107210           1.0  1.000000\n",
+      "...               ...        ...        ...        ...   ...     ...       ...\n",
+      "2019-06-18  36.700001  35.249369  37.239697  33.259041   buy     1.0  1.176431\n",
+      "2019-06-19  36.779999  35.251553  37.248834  33.254271   buy     1.0  1.176431\n",
+      "2019-06-20  36.959999  35.340899  37.478352  33.203445   buy     1.0  1.176431\n",
+      "2019-06-21  36.919998  35.449022  37.678999  33.219046   buy     1.0  1.176431\n",
+      "2019-06-24  36.814999  35.552390  37.836478  33.268302   buy     1.0  1.176431\n",
+      "\n",
+      "[2132 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(price_df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +632,7 @@
        "Name: trade, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,14 +660,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\3733703238.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\3733703238.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -722,14 +753,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_3232\\1175450679.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_24048\\1175450679.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -757,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +979,7 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
