--- a/note_summary.ipynb
+++ b/note_summary.ipynb
@@ -294,13 +294,13 @@
     "print(b.title())\n",
     "\n",
     "#  좌우의 공백을 제거하는 함수\n",
-    "# strip()\n",
+    "# strip() #인자 값을 입력하면 위치에 맞게 교체해줌 \n",
     "a.lstrip()\n",
     "a.rstrip()\n",
     "\n",
     "# 특정한 단어를 대체하는 함수 \n",
     "# replace(기준 단어, 대체할 단어)\n",
-    "\n",
+    "# 해당하는 모든 경우를 교체해줌\n",
     "# b 변수의 '$' 표기를 '-' 변경\n",
     "b.replace('$', '-')\n",
     "\n",
@@ -345,7 +345,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 클래스\n"
+    "# 클래스\n",
+    "# 클래스 생성\n",
+    "class User:\n",
+    "    def __init__(self, name, number,birth):\n",
+    "        self.name = name   \n",
+    "        self.number =number\n",
+    "        self.birth = birth\n",
+    "    \n",
+    "    def info(self):\n",
+    "        return (self.name,self.number,self.birth)\n",
+    "    \n",
+    "# overriding 상실\n",
+    "# 부모 클래스와 자식 클래스에 같은 명령어가 있을때 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "# 클래스 지정 후 추출\n",
+    "test = User('test', '01012345678','970811')\n",
+    "test.info() #test.name"
    ]
   },
   {
@@ -482,11 +506,13 @@
     "                    # or\n",
     "pd.concat([df, df2], axis = 0).reset_index(drop =True)\n",
     "\n",
-    "pd.merge(df, df2, on = 'id')\n",
-    "# on = left 왼쪽 기준으로 분류\n",
+    "pd.merge(df, df2, on = 'id', how='?')\n",
+    "    # on = left 왼쪽 기준으로 분류\n",
     "    #= right 오른쪽 기준으로 분류\n",
     "    #= inner 두 조건의 교집합\n",
     "    #= outer 두 조건의 외집합\n",
+    "    #on 대신에\n",
+    "    #left on = 왼쪽에서 원하는 값 ,right on = 오른쪽에서 원하는 값\n",
     "\n",
     "#원하는 나라 순위를 찾아보자\n",
     "drinks_rank.loc[drinks_rank['country']=='South Korea']\n",
@@ -496,11 +522,20 @@
     "\n",
     "# pct_change()시계열 데이터에서 이전 값과의 변화율(percentage change)을 계산하는 함수입니다.\n",
     "# pct_change() 함수는 DataFrame, Series 등의 데이터 타입에서 사용할 수 있습니다.\n",
-    "\n",
+    "# 시계열을 문자열로 strftime\n",
+    "# 문자열을 시계열로 strptime\n",
     "# 결측치와 무한대의 값이 존재하는지 확인  inf 무한대\n",
     "df.loc[df.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
     "# df.loc[뒤에 ~사용시 결측치가 아닌 나머지의 값들만 나오기 때문에 아래 결측치를 drop한 값과 같음\n",
-    "\n",
+    "# apply /스리즈나 데이터 \n",
+    "# map 함수 /리스트나 튜플\n",
+    "# x =[1,2,3,4]\n",
+    "# def change(x):\n",
+    "#     return x**2\n",
+    "# list(map(lambda y:y**2,x))\n",
+    "# str.startswith('')시작하는 단어\n",
+    "# str.endswith('S')s로 끝나는 단어\n",
+    "# .str.contains('S')s가 포함되어 있는 단어\n",
     "# 누적곱 cumprod()"
    ]
   },
