--- a/230424/02_halloween.ipynb
+++ b/230424/02_halloween.ipynb
@@ -589,7 +589,9 @@
     }
    ],
    "source": [
-    "six_month(data)"
+    "six_month(data)\n",
+    "filtered_data = grouped_data[grouped_data['업종'] == '온라인']\n",
+    "grouped_data = data.groupby(['월', '업종', '성별'])['매출'].sum().reset_index()"
    ]
   },
   {
