--- a/note_summary.ipynb
+++ b/note_summary.ipynb
@@ -590,7 +590,15 @@
     "### pivot_table\n",
     "1. 그룹화\n",
     "2. 인덱스, 컬럼을 기준으로그룹화\n",
-    "3. 데이터 집계를 나타낸다\n"
+    "3. 데이터 집계를 나타낸다\n",
+    " data = pd.concat([df,df1],axis=0)\n",
+    "pivot_data = pd.pivot_table(\n",
+    "    data,\n",
+    "    index =data.index,\n",
+    "    columns='업종',\n",
+    "    values='총이용금액',\n",
+    "    aggfunc='sum'\n",
+    ")"
    ]
   },
   {
