--- a/230425/03_matplotlib.ipynb
+++ b/230425/03_matplotlib.ipynb
@@ -1732,11 +1732,258 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 결합된 데이터프레임에서 성별을 1은  '남자' 2는 '여자' 변경\n",
+    "2. 온라인 업종의 남, 여의 카드매출을 월별로 어떻게 차이가 나는가를 시각화 하여 표시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    1661\n",
+       "1    1638\n",
+       "Name: 성별, dtype: int64"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['성별'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 3299 entries, 2019-01-01 to 2021-09-01\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   업종      3299 non-null   object \n",
+      " 1   성별      3299 non-null   object \n",
+      " 2   연령대     3299 non-null   int64  \n",
+      " 3   총이용건수   3299 non-null   int64  \n",
+      " 4   총이용금액   3299 non-null   float64\n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 154.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['성별'] = data['성별'].map({1: '남자', 2: '여자'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>업종</th>\n",
+       "      <th>성별</th>\n",
+       "      <th>연령대</th>\n",
+       "      <th>총이용건수</th>\n",
+       "      <th>총이용금액</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>기준년월</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>20</td>\n",
+       "      <td>272915</td>\n",
+       "      <td>1.385408e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1320227</td>\n",
+       "      <td>8.294613e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1372052</td>\n",
+       "      <td>9.555085e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>50</td>\n",
+       "      <td>573967</td>\n",
+       "      <td>4.450626e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>60</td>\n",
+       "      <td>176773</td>\n",
+       "      <td>1.478519e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2071465</td>\n",
+       "      <td>1.136805e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>20</td>\n",
+       "      <td>613926</td>\n",
+       "      <td>2.852862e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>남자</td>\n",
+       "      <td>90</td>\n",
+       "      <td>867</td>\n",
+       "      <td>1.415199e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>80</td>\n",
+       "      <td>20094</td>\n",
+       "      <td>1.935122e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>온라인</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>90</td>\n",
+       "      <td>611</td>\n",
+       "      <td>5.284020e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>651 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             업종  성별  연령대    총이용건수         총이용금액\n",
+       "기준년월                                           \n",
+       "2019-01-01  온라인  남자   20   272915  1.385408e+10\n",
+       "2019-01-01  온라인  남자   30  1320227  8.294613e+10\n",
+       "2019-01-01  온라인  남자   40  1372052  9.555085e+10\n",
+       "2019-01-01  온라인  남자   50   573967  4.450626e+10\n",
+       "2019-01-01  온라인  남자   60   176773  1.478519e+10\n",
+       "...         ...  ..  ...      ...           ...\n",
+       "2021-09-01  온라인  남자   30  2071465  1.136805e+11\n",
+       "2021-09-01  온라인  남자   20   613926  2.852862e+10\n",
+       "2021-09-01  온라인  남자   90      867  1.415199e+08\n",
+       "2021-09-01  온라인  여자   80    20094  1.935122e+09\n",
+       "2021-09-01  온라인  여자   90      611  5.284020e+07\n",
+       "\n",
+       "[651 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[grouped_data['업종'] == '온라인']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "online_data = data.loc[data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot_data = pd.pivot_table(\n",
+    "    data,\n",
+    "    index =online_data.index,\n",
+    "    columns='성별',\n",
+    "    values='총이용금액',\n",
+    "    aggfunc='sum'\n",
+    ").plot"
+   ]
   }
  ],
  "metadata": {
