--- a/note_summary.ipynb
+++ b/note_summary.ipynb
@@ -493,7 +493,8 @@
     "# pd.to_datetime(변경할 데이터, format = \"\")\n",
     "t = '04/05/05'\n",
     "pd.to_datetime(t, format=\"%y/%m/%d\")\n",
-    "\n",
+    "# 2019년1월 1일  이후 데이터만 출력\n",
+    "data.loc[data['start_date']>='2019-01-01']\n",
     "# 원본데이터를 생성\n",
     "origin_data = uriage.copy()\n",
     "\n",
