--- a/230404/02_corona.ipynb
+++ b/230404/02_corona.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "1     00:00  2022-06-08 09:10:36.846         NaN         NaN  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,18 +113,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unnamed: 0 컬럼을 삭제\n",
-    "corona = corona.drop(\"Unnamed: 0\", axis =1)\n",
-    "# corona.drop(\"Unnamed:0\", axis =??)\n"
+    "corona = corona.drop(\"Unnamed: 0\", axis =1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona['accExamCnt']= corona['accExamCnt'].fillna(method='bfill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona['accDefRate'] = corona['accDefRate'].fillna(method='bfill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +185,8 @@
        "      <td>20220608</td>\n",
        "      <td>00:00</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.787908</td>\n",
+       "      <td>2.787908</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -181,10 +197,10 @@
        "0  2022-06-08 09:09:05.982     24305   18188200  904  20220608     00:00   \n",
        "\n",
        "  updateDt  accExamCnt  accDefRate  \n",
-       "0      NaN         NaN         NaN  "
+       "0      NaN    2.787908    2.787908  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +211,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply를 사용하여 새로운 파생변수 h/l accdefrate의 값이 1.55보다 크면 high아니면 low\n",
+    "\n",
+    "def change(x):\n",
+    "    if x > 1.55:\n",
+    "        return 'High'\n",
+    "    else:\n",
+    "          return 'Low'\n",
+    "corona['accDefRate'].apply(change)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Low     420\n",
+       "High    400\n",
+       "Name: accDefRate, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# apply + lambda\n",
+    "# if문을 한줄로 사용 : 참인경우 if 조건식 else 거짓인 경우 값\n",
+    "corona['accDefRate'].apply(lambda x: 'High' if x > 1.55 else 'Low').value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +370,7 @@
        "817  2021-10-07 10:30:51.51  234998.0  3.621744  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_7280\\2077565921.py:4: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\bjw\\AppData\\Local\\Temp\\ipykernel_22900\\2077565921.py:4: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  corona.일일확진자=corona.누적확진자.diff()\n"
      ]
     }
@@ -356,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +533,7 @@
        "819                      NaN    NaN    NaN  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +641,7 @@
        "1  2021-10-07 10:30:51.51  222395.0  3.804175    6.0  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
