--- a/230411/01_selenium.ipynb
+++ b/230411/01_selenium.ipynb
@@ -13,9 +13,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.9.1-py3-none-any.whl (6.6 MB)\n",
+      "     ---------------------------------------- 6.6/6.6 MB 8.4 MB/s eta 0:00:00\n",
+      "Collecting trio~=0.17\n",
+      "  Using cached trio-0.22.0-py3-none-any.whl (384 kB)\n",
+      "Collecting urllib3[socks]<3,>=1.26\n",
+      "  Downloading urllib3-2.0.2-py3-none-any.whl (123 kB)\n",
+      "     -------------------------------------- 123.2/123.2 kB 7.1 MB/s eta 0:00:00\n",
+      "Collecting certifi>=2021.10.8\n",
+      "  Downloading certifi-2023.5.7-py3-none-any.whl (156 kB)\n",
+      "     -------------------------------------- 157.0/157.0 kB 4.7 MB/s eta 0:00:00\n",
+      "Collecting trio-websocket~=0.9\n",
+      "  Using cached trio_websocket-0.10.2-py3-none-any.whl (17 kB)\n",
+      "Collecting outcome\n",
+      "  Using cached outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
+      "Collecting exceptiongroup>=1.0.0rc9\n",
+      "  Using cached exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
+      "Collecting sortedcontainers\n",
+      "  Using cached sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\bjw\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.15.1)\n",
+      "Collecting async-generator>=1.9\n",
+      "  Using cached async_generator-1.10-py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: idna in c:\\users\\bjw\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (3.4)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\bjw\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in c:\\users\\bjw\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from trio~=0.17->selenium) (23.1.0)\n",
+      "Collecting wsproto>=0.14\n",
+      "  Using cached wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Collecting pysocks!=1.5.7,<2.0,>=1.5.6\n",
+      "  Using cached PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\bjw\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Collecting h11<1,>=0.9.0\n",
+      "  Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "Installing collected packages: sortedcontainers, urllib3, pysocks, outcome, h11, exceptiongroup, certifi, async-generator, wsproto, trio, trio-websocket, selenium\n",
+      "Successfully installed async-generator-1.10 certifi-2023.5.7 exceptiongroup-1.1.1 h11-0.14.0 outcome-1.2.0 pysocks-1.7.1 selenium-4.9.1 sortedcontainers-2.4.0 trio-0.22.0 trio-websocket-0.10.2 urllib3-2.0.2 wsproto-1.2.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.1.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# 라이브러리 설치\n",
     "!pip install selenium"
@@ -395,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
