--- a/ML/0511_pima.ipynb
+++ b/ML/0511_pima.ipynb
@@ -512,6 +512,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import Binarizer\n",
+    "\n",
+    "def get_eval_by_threshold(y_test,pred_proba_c1,thresholds):\n",
+    "    # thresholds 리스트 객체내의 값을 차례로 iteration 하면서 Evaluation 수행.\n",
+    "    for custom_threshold in thresholds:\n",
+    "        binarizer = Binarizer(threshold=custom_threshold).fit(pred_proba_c1)\n",
+    "        custom_predict = binarizer.transform(pred_proba_c1)\n",
+    "        print('임곗값:', custom_threshold)\n",
+    "        get_clf_eval(y_test, custom_predict,pred_proba_c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "임곗값: 0.3\n",
+      "오차행렬\n",
+      "[[67 33]\n",
+      " [11 43]]\n",
+      "정확도 : 0.7143, 정밀도 : 0.5658, 재현율 : 0.7963 , f1Score:0.6615, AUC:0.8433\n",
+      "임곗값: 0.33\n",
+      "오차행렬\n",
+      "[[72 28]\n",
+      " [12 42]]\n",
+      "정확도 : 0.7403, 정밀도 : 0.6000, 재현율 : 0.7778 , f1Score:0.6774, AUC:0.8433\n",
+      "임곗값: 0.36\n",
+      "오차행렬\n",
+      "[[76 24]\n",
+      " [15 39]]\n",
+      "정확도 : 0.7468, 정밀도 : 0.6190, 재현율 : 0.7222 , f1Score:0.6667, AUC:0.8433\n",
+      "임곗값: 0.39\n",
+      "오차행렬\n",
+      "[[78 22]\n",
+      " [16 38]]\n",
+      "정확도 : 0.7532, 정밀도 : 0.6333, 재현율 : 0.7037 , f1Score:0.6667, AUC:0.8433\n",
+      "임곗값: 0.42\n",
+      "오차행렬\n",
+      "[[84 16]\n",
+      " [18 36]]\n",
+      "정확도 : 0.7792, 정밀도 : 0.6923, 재현율 : 0.6667 , f1Score:0.6792, AUC:0.8433\n",
+      "임곗값: 0.45\n",
+      "오차행렬\n",
+      "[[85 15]\n",
+      " [18 36]]\n",
+      "정확도 : 0.7857, 정밀도 : 0.7059, 재현율 : 0.6667 , f1Score:0.6857, AUC:0.8433\n",
+      "임곗값: 0.48\n",
+      "오차행렬\n",
+      "[[88 12]\n",
+      " [19 35]]\n",
+      "정확도 : 0.7987, 정밀도 : 0.7447, 재현율 : 0.6481 , f1Score:0.6931, AUC:0.8433\n",
+      "임곗값: 0.5\n",
+      "오차행렬\n",
+      "[[90 10]\n",
+      " [21 33]]\n",
+      "정확도 : 0.7987, 정밀도 : 0.7674, 재현율 : 0.6111 , f1Score:0.6804, AUC:0.8433\n"
+     ]
+    }
+   ],
+   "source": [
+    "thresholds =[0.3,0.33,0.36,0.39,0.42,0.45,0.48,0.50]\n",
+    "pred_proba= lr_clf.predict_proba(x_test)\n",
+    "get_eval_by_threshold(y_test,pred_proba[:,1].reshape(-1,1),thresholds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
